fix: form-content items alignment

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     display: grid;
     grid-template-columns: max-content max-content;
     grid-gap: 5px;
+    align-items: baseline;
 
     label {
       text-align: right;
